finishing topics controller and view

--- a/Udemy/appsettings.json
+++ b/Udemy/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Udemy-ABACBE9F-CD42-4BD7-B6D2-D1ABF088F390;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-OI0S6K4\\SQLEXPRESS;Database=UdemyDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
